--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,7 +62,7 @@
 <!-- License -->
 <hr>
 <div class="footer">
-  <p>All content on this website is protected under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons BY-NC 4.0 license</a>.
+  <p>All content on this website is protected under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons BY 4.0 license</a>.
   </p>
 </div>
 
