Remove unnecessary HTML tag 'active'

--- a/src/templates/textbook.html
+++ b/src/templates/textbook.html
@@ -18,7 +18,7 @@
 {% block prologue %}
 <div id="navbar" class="navbar">
   <div class="page">
-    <a href="{{ url_for('render_index') }}#Textbooks" class="active">
+    <a href="{{ url_for('render_index') }}#Textbooks">
       <i class="fas fa-tree"></i>
     </a>
     <div class="dropdown">
