--- a/src/templates/textbook.html
+++ b/src/templates/textbook.html
@@ -16,32 +16,18 @@
 {% endblock %}
 
 {% block prologue %}
-<div id="navbar" class="navbar">
-  <div class="page">
-    <a href="{{ url_for('render_index') }}#Textbooks">
-      <i class="fas fa-tree"></i>
-    </a>
-    <div class="dropdown">
-      <button class="dropbtn" onclick="toggleDisplay('chapter-dropdown', 'none', 'block')">
-        More Chapters
-      </button>
-      <div id="chapter-dropdown" class="dropdown-content" style="display: none;">
-        {% for chapter in resource.textbook.chapters %}
-          <a href="{{ url_for(chapter.renderer) }}">{{ chapter.title }}</a>
-        {% endfor %}
-      </div>
-    </div>
-    {% if is_practice %}
-      <a href="{{ url_for(resource.chapter.renderer) }}">Review</a>
-    {% elif resource.practice %}
-      <a href="{{ url_for(resource.practice.renderer) }}">Practice</a>
-    {% endif %}
-    <a href="javascript:void(0);" class="icon"
-       onclick="toggleClass('navbar', 'navbar', 'responsive');">
-      &#9776;
-    </a>
-  </div>
-</div>
+{{ macros.start_navbar() }}
+  {{ macros.start_dropdown('More Chapters', 'chapter-dropdown') }}
+    {% for chapter in resource.textbook.chapters %}
+      <a href="{{ url_for(chapter.renderer) }}">{{ chapter.title }}</a>
+    {% endfor %}
+  {{ macros.end_dropdown() }}
+  {% if is_practice %}
+    <a href="{{ url_for(resource.chapter.renderer) }}">Review</a>
+  {% elif resource.practice %}
+    <a href="{{ url_for(resource.practice.renderer) }}">Practice</a>
+  {% endif %}
+{{ macros.end_navbar() }}
 {% endblock %}
 
 {% block script %}
