--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %}Sequoia Tree{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}?version=1">
     {{ include.css(("https://fonts.googleapis.com/css?family=Raleway:400,500",)) }}
     {{ include.static_css(('main', 'button', 'collapsible')) }}
     {% block head %}
