--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -15,6 +15,10 @@
   color: #ecf0f1;
 }
 
+.navbar a:first-child {
+  padding-left: 8px;
+}
+
 .navbar .icon {
   display: none;
   font-size: 11pt;
