--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -58,6 +58,7 @@ a, a:hover {
   border: solid 2px #3cc216;
   border-radius: 23px;
   transition: 1s;
+  cursor: pointer;
 }
 .accordion-option:hover, .accordion-option.active {
   color: black;
@@ -129,6 +130,7 @@ a, a:hover {
   border: solid 2px #3cc216;
   border-radius: 23px;
   transition: 1s;
+  cursor: pointer;
 }
 .button:hover, .button.active {
   color: black;
@@ -183,7 +185,7 @@ a, a:hover {
 }
 
 hr {
-  border-top-width: 2px;
+  border-top: solid 2px #d7e1e1;
 }
 
 .page-content {
@@ -244,6 +246,7 @@ a, a:hover {
   border: solid 2px #3cc216;
   border-radius: 23px;
   transition: 1s;
+  cursor: pointer;
 }
 .nav-pills .nav-link:hover, .nav-pills .nav-link.active, .nav-pills .nav-link.active:hover, .nav-pills .nav-link.active.active, .nav-pills .show > .nav-link:hover, .nav-pills .show > .nav-link.active {
   color: black;
@@ -264,6 +267,150 @@ a, a:hover {
 .section-link {
   color: rgba(60, 194, 22, 0);
   transition: 0.5s;
+}
+
+a, a:hover {
+  color: #3cc216;
+  text-decoration: none;
+}
+
+.font-family-serif {
+  font-family: "Arapey", serif;
+}
+
+.font-family-sans-serif {
+  font-family: "Work Sans", sans-serif;
+}
+
+.font-family-monospace {
+  font-family: "Source Code Pro", monospace;
+}
+
+.font-size-title {
+  font-size: 60pt;
+}
+
+.font-size-section {
+  font-size: 30pt;
+}
+
+.font-size-subsection {
+  font-size: 24pt;
+}
+
+.font-size-subsubsection {
+  font-size: 18pt;
+}
+
+.font-size-clickable {
+  font-size: 13.5pt;
+}
+
+.font-size-paragraph {
+  font-size: 12.5pt;
+}
+
+.text-reverse {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  height: 10px;
+  border-radius: 5px;
+  background: #d7e1e1;
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  color: black;
+  text-decoration: none;
+  font-size: 13.5pt;
+  background: #d7e1e1;
+  border: solid 2px #3cc216;
+  border-radius: 23px;
+  transition: 1s;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+input[type=range]::-webkit-slider-thumb:hover, input[type=range]::-webkit-slider-thumb.active {
+  color: black;
+  text-decoration: none;
+  background: white;
+}
+input[type=range]::-moz-range-track {
+  height: 10px;
+  border-radius: 5px;
+  background: #d7e1e1;
+}
+input[type=range]::-moz-range-thumb {
+  color: black;
+  text-decoration: none;
+  font-size: 13.5pt;
+  background: #d7e1e1;
+  border: solid 2px #3cc216;
+  border-radius: 23px;
+  transition: 1s;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+input[type=range]::-moz-range-thumb:hover, input[type=range]::-moz-range-thumb.active {
+  color: black;
+  text-decoration: none;
+  background: white;
+}
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
+input[type=range]::-ms-track {
+  height: 10px;
+  border-radius: 5px;
+  background: #d7e1e1;
+  border-width: 7px 0;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-thumb {
+  color: black;
+  text-decoration: none;
+  font-size: 13.5pt;
+  background: #d7e1e1;
+  border: solid 2px #3cc216;
+  border-radius: 23px;
+  transition: 1s;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+input[type=range]::-ms-thumb:hover, input[type=range]::-ms-thumb.active {
+  color: black;
+  text-decoration: none;
+  background: white;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]:hover::-webkit-slider-thumb {
+  color: black;
+  text-decoration: none;
+  background: white;
+}
+input[type=range]:hover::-moz-range-thumb {
+  color: black;
+  text-decoration: none;
+  background: white;
+}
+input[type=range]:hover::-ms-thumb {
+  color: black;
+  text-decoration: none;
+  background: white;
 }
 
 a, a:hover {
